zoom-bg sizing fix when scrolling on mobile

--- a/src/app/components/zoom-bg.module.css
+++ b/src/app/components/zoom-bg.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   left: 0;
   right: 0;
