--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,7 @@ button:focus {
   width: 100%;
   min-height: 100vh;
   position: relative;
+  scroll-behavior: smooth;
 }
 
 .main {
